--- a/app/scss/3-organismes/_form.scss
+++ b/app/scss/3-organismes/_form.scss
@@ -2,6 +2,7 @@
     
     #{$all-text-inputs} {
         border: none;
+        outline: none;
         &::placeholder {
             color: $color-gray-dark;
         }
